# frontend/openapi.json
@@ -253,6 +253,10 @@
             "title": "Last Name",
             "type": "string"
           },
+          "remember_me": {
+            "title": "Remember Me",
+            "type": "boolean"
+          },
           "role": {
             "title": "Role",
             "type": "string"
@@ -265,6 +269,7 @@
           "last_name",
           "email",
           "role",
+          "remember_me",
           "full_name"
         ],
         "title": "AuthResponse",
@@ -2028,14 +2033,14 @@
             "type": "string"
           },
           "remember_me": {
+            "default": false,
             "title": "Remember Me",
             "type": "boolean"
           }
         },
         "required": [
           "email",
-          "password",
-          "remember_me"
+          "password"
         ],
         "title": "LoginRequest",
         "type": "object"
